Created a test to check if we could sign a client cert using a host cert, and a test in the code to prevent this from happening